[gd_scene load_steps=4 format=3 uid="uid://cdskt76vkvxfx"]

[ext_resource type="Script" path="res://Scenes/Projectiles/enemy_projectile.gd" id="1_3a7lh"]
[ext_resource type="Texture2D" uid="uid://df8g06yiidhkt" path="res://Assets/Weapons/bullet.png" id="2_46mns"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0302n"]
radius = 2.0

[node name="EnemyProjectile" type="Area2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource("1_3a7lh")
speed = 100.0
damage = 1.0

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0.25, -0.25)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_46mns")
hframes = 2

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0302n")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
